# Backend

./: .gitignore  LICENSE  README.md  SCHEMA.md  __init__.py  db.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  req.txt  test_cache.py
Backend/: .gitignore  SCHEMA.md
Backend/Supa/supabase/: config.toml
Backend/extra/: custom_types.py
Backend/models/: users.py
Backend/routes/: Pets.py
Design/: canvas.js  index.html  style.css
auth/: README.md  __init__.py  auth.py  dependencies.py  deps.py  models.py
extra/: custom_types.py  enums.py
models/: __init__.py  pets.py  users.py
routes/: Pets.py  __init__.py  test_routes.py
src/: App.css  App.jsx  index.css
src/components/: AppointmentTimeline.jsx  InfoSection.jsx  LoadingScreen.jsx  NotificationCenter.jsx  PatientHistoryList.jsx  PatientList.jsx  TopNavigation.jsx
src/components/icons/: HomeAlt2Icon.jsx  MedicalKitIcon.jsx
src/data/: portalData.js
src/pages/: DoctorProfilePage.jsx  HomePage.jsx  PatientDetailsPage.jsx  PatientsPage.jsx
